<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="yangFenTuoZi.shamikox.fragment.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_superuser"
        android:name="yangFenTuoZi.shamikox.fragment.superuser.SuperuserFragment"
        android:label="@string/superuser"
        tools:layout="@layout/fragment_superuser" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="yangFenTuoZi.shamikox.fragment.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
</navigation>