<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:id="@+id/policy"
        android:nextFocusRight="@id/indicator">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/app_icon"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="@dimen/l1"
                    android:layout_marginTop="@dimen/l1"
                    android:layout_marginBottom="@dimen/l1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0"
                    tools:src="@mipmap/ic_launcher" />

                <TextView
                    android:id="@+id/app_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_generic"
                    android:layout_marginRight="@dimen/margin_generic"
                    android:ellipsize="middle"
                    android:gravity="start"
                    android:maxLines="2"
                    android:textIsSelectable="false"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/indicator"
                    app:layout_constraintStart_toEndOf="@+id/app_icon"
                    app:layout_constraintTop_toTopOf="@+id/app_icon"
                    tools:text="@string/app_name" />

                <TextView
                    android:id="@+id/package_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/l1"
                    android:ellipsize="middle"
                    android:gravity="start"
                    android:maxLines="2"
                    android:textColor="@android:color/tertiary_text_dark"
                    android:textIsSelectable="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/app_name"
                    app:layout_constraintStart_toStartOf="@id/app_name"
                    app:layout_constraintTop_toBottomOf="@id/app_name"
                    app:layout_constraintVertical_bias="0"
                    tools:text="yangFenTuoZi.shamikox" />

                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/indicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/l1"
                    android:nextFocusLeft="@id/policy"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/expand_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="@dimen/l1"
                android:paddingEnd="@dimen/l1"
                android:paddingBottom="@dimen/l_50"
                android:visibility="gone"
                tools:visibility="visible">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="@dimen/l_50"
                    android:layout_marginEnd="@dimen/l_50"
                    android:background="?colorSurfaceVariant"
                    android:layout_marginBottom="@dimen/l_50"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.materialswitch.MaterialSwitch
                        android:id="@+id/notify"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/l_50"
                        android:layout_weight="1"
                        android:text="@string/notifications"
                        android:textAllCaps="false"
                        app:icon="@drawable/ic_notifications_24" />

                    <com.google.android.material.materialswitch.MaterialSwitch
                        android:id="@+id/log"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/l_50"
                        android:layout_weight="1"
                        android:text="@string/logs"
                        android:textAllCaps="false"
                        app:icon="@drawable/ic_logs_24" />
                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingStart="@dimen/l2"
                    android:paddingTop="@dimen/l_75"
                    android:paddingEnd="@dimen/l2"
                    android:paddingBottom="@dimen/l_75"
                    android:text="@string/revoke"
                    android:textAllCaps="false"
                    app:icon="@drawable/ic_delete_24" />

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</FrameLayout>